--- a/DcmNetTools/Terminal.ui
+++ b/DcmNetTools/Terminal.ui
@@ -12,7 +12,7 @@
   </property>
   <property name="font">
    <font>
-    <family>微软雅黑</family>
+    <family>Courier</family>
    </font>
   </property>
   <property name="windowTitle">
@@ -28,14 +28,14 @@
          <item>
           <widget class="QLabel" name="label_2">
            <property name="text">
-            <string>State:</string>
+            <string>State    :</string>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QLabel" name="label">
            <property name="text">
-            <string>Command    :</string>
+            <string>Command  :</string>
            </property>
           </widget>
          </item>
