--- a/DcmNetTools/EchoStoreSCP.ui
+++ b/DcmNetTools/EchoStoreSCP.ui
@@ -26,35 +26,35 @@
        <item>
         <widget class="QLabel" name="label_4">
          <property name="text">
-          <string>State    :</string>
+          <string>State        :</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QLabel" name="label">
          <property name="text">
-          <string>AE Title :</string>
+          <string>SCP AE Title :</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QLabel" name="label_2">
          <property name="text">
-          <string>Port     :</string>
+          <string>Port         :</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QLabel" name="label_6">
          <property name="text">
-          <string>Out Dir  :</string>
+          <string>Out Dir      :</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QLabel" name="label_5">
          <property name="text">
-          <string>Log Level:</string>
+          <string>Log Level    :</string>
          </property>
         </widget>
        </item>
@@ -70,7 +70,11 @@
         </widget>
        </item>
        <item>
-        <widget class="QLineEdit" name="lineEditAETitle"/>
+        <widget class="QLineEdit" name="lineEditAETitle">
+         <property name="text">
+          <string>EchoStoreSCP</string>
+         </property>
+        </widget>
        </item>
        <item>
         <widget class="QLineEdit" name="lineEditPort"/>
@@ -107,7 +111,7 @@
        <item>
         <widget class="QLabel" name="label_3">
          <property name="text">
-          <string>Log      :</string>
+          <string>Log          :</string>
          </property>
         </widget>
        </item>
